cdk.out/ClusterStack.template.json
{
  "Resources": {
    "Vpc8378EB38": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "ClusterStack/Vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/Resource"
      }
    },
    "VpcPublicSubnet1Subnet5C2D37C4": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/18",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "dummy1a",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "ClusterStack/Vpc/PublicSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/PublicSubnet1/Subnet"
      }
    },
    "VpcPublicSubnet1RouteTable6C95E38E": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ClusterStack/Vpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/PublicSubnet1/RouteTable"
      }
    },
    "VpcPublicSubnet1RouteTableAssociation97140677": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet1RouteTable6C95E38E"
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/PublicSubnet1/RouteTableAssociation"
      }
    },
    "VpcPublicSubnet1DefaultRoute3DA9E72A": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet1RouteTable6C95E38E"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C"
        }
      },
      "DependsOn": [
        "VpcVPCGWBF912B6E"
      ],
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/PublicSubnet1/DefaultRoute"
      }
    },
    "VpcPublicSubnet1EIPD7E02669": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/PublicSubnet1/EIP"
      }
    },
    "VpcPublicSubnet1NATGateway4D7517AA": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "VpcPublicSubnet1EIPD7E02669",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ClusterStack/Vpc/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/PublicSubnet1/NATGateway"
      }
    },
    "VpcPublicSubnet2Subnet691E08A3": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.64.0/18",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "dummy1b",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "ClusterStack/Vpc/PublicSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/PublicSubnet2/Subnet"
      }
    },
    "VpcPublicSubnet2RouteTable94F7E489": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ClusterStack/Vpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/PublicSubnet2/RouteTable"
      }
    },
    "VpcPublicSubnet2RouteTableAssociationDD5762D8": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet2RouteTable94F7E489"
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnet2Subnet691E08A3"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/PublicSubnet2/RouteTableAssociation"
      }
    },
    "VpcPublicSubnet2DefaultRoute97F91067": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPublicSubnet2RouteTable94F7E489"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C"
        }
      },
      "DependsOn": [
        "VpcVPCGWBF912B6E"
      ],
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/PublicSubnet2/DefaultRoute"
      }
    },
    "VpcPublicSubnet2EIP3C605A87": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/PublicSubnet2/EIP"
      }
    },
    "VpcPublicSubnet2NATGateway9182C01D": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "VpcPublicSubnet2EIP3C605A87",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "VpcPublicSubnet2Subnet691E08A3"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ClusterStack/Vpc/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/PublicSubnet2/NATGateway"
      }
    },
    "VpcPrivateSubnet1Subnet536B997A": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.128.0/18",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "dummy1a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "ClusterStack/Vpc/PrivateSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/PrivateSubnet1/Subnet"
      }
    },
    "VpcPrivateSubnet1RouteTableB2C5B500": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ClusterStack/Vpc/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/PrivateSubnet1/RouteTable"
      }
    },
    "VpcPrivateSubnet1RouteTableAssociation70C59FA6": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPrivateSubnet1RouteTableB2C5B500"
        },
        "SubnetId": {
          "Ref": "VpcPrivateSubnet1Subnet536B997A"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "VpcPrivateSubnet1DefaultRouteBE02A9ED": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPrivateSubnet1RouteTableB2C5B500"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VpcPublicSubnet1NATGateway4D7517AA"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/PrivateSubnet1/DefaultRoute"
      }
    },
    "VpcPrivateSubnet2Subnet3788AAA1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.192.0/18",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "dummy1b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "ClusterStack/Vpc/PrivateSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/PrivateSubnet2/Subnet"
      }
    },
    "VpcPrivateSubnet2RouteTableA678073B": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ClusterStack/Vpc/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/PrivateSubnet2/RouteTable"
      }
    },
    "VpcPrivateSubnet2RouteTableAssociationA89CAD56": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPrivateSubnet2RouteTableA678073B"
        },
        "SubnetId": {
          "Ref": "VpcPrivateSubnet2Subnet3788AAA1"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "VpcPrivateSubnet2DefaultRoute060D2087": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcPrivateSubnet2RouteTableA678073B"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VpcPublicSubnet2NATGateway9182C01D"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/PrivateSubnet2/DefaultRoute"
      }
    },
    "VpcIGWD7BA715C": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "ClusterStack/Vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/IGW"
      }
    },
    "VpcVPCGWBF912B6E": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "InternetGatewayId": {
          "Ref": "VpcIGWD7BA715C"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Vpc/VPCGW"
      }
    },
    "ClusterEB0386A7": {
      "Type": "AWS::ECS::Cluster",
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Cluster/Resource"
      }
    },
    "ClusterDefaultCapacityInstanceSecurityGroup8FDF4D48": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "ClusterStack/Cluster/DefaultCapacity/InstanceSecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [],
        "Tags": [
          {
            "Key": "Name",
            "Value": "ClusterStack/Cluster/DefaultCapacity"
          }
        ],
        "VpcId": {
          "Ref": "Vpc8378EB38"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Cluster/DefaultCapacity/InstanceSecurityGroup/Resource"
      }
    },
    "ClusterDefaultCapacityInstanceRole3E209969": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": {
                  "Fn::Join": [
                    "",
                    [
                      "ec2.",
                      {
                        "Ref": "AWS::URLSuffix"
                      }
                    ]
                  ]
                }
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Cluster/DefaultCapacity/InstanceRole/Resource"
      }
    },
    "ClusterDefaultCapacityInstanceRoleDefaultPolicy0803DA08": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ecs:CreateCluster",
                "ecs:DeregisterContainerInstance",
                "ecs:DiscoverPollEndpoint",
                "ecs:Poll",
                "ecs:RegisterContainerInstance",
                "ecs:StartTelemetrySession",
                "ecs:Submit*",
                "ecr:GetAuthorizationToken",
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": "*"
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "ClusterDefaultCapacityInstanceRoleDefaultPolicy0803DA08",
        "Roles": [
          {
            "Ref": "ClusterDefaultCapacityInstanceRole3E209969"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Cluster/DefaultCapacity/InstanceRole/DefaultPolicy/Resource"
      }
    },
    "ClusterDefaultCapacityInstanceProfile70387741": {
      "Type": "AWS::IAM::InstanceProfile",
      "Properties": {
        "Roles": [
          {
            "Ref": "ClusterDefaultCapacityInstanceRole3E209969"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Cluster/DefaultCapacity/InstanceProfile"
      }
    },
    "ClusterDefaultCapacityLaunchConfig72790CF7": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Properties": {
        "ImageId": "",
        "InstanceType": "m3.medium",
        "IamInstanceProfile": {
          "Ref": "ClusterDefaultCapacityInstanceProfile70387741"
        },
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "ClusterDefaultCapacityInstanceSecurityGroup8FDF4D48",
              "GroupId"
            ]
          }
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Join": [
              "",
              [
                "#!/bin/bash\necho ECS_CLUSTER=",
                {
                  "Ref": "ClusterEB0386A7"
                },
                " >> /etc/ecs/ecs.config\nsudo iptables --insert FORWARD 1 --in-interface docker+ --destination 169.254.169.254/32 --jump DROP\nsudo service iptables save\necho ECS_AWSVPC_BLOCK_IMDS=true >> /etc/ecs/ecs.config"
              ]
            ]
          }
        }
      },
      "DependsOn": [
        "ClusterDefaultCapacityInstanceRoleDefaultPolicy0803DA08",
        "ClusterDefaultCapacityInstanceRole3E209969"
      ],
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Cluster/DefaultCapacity/LaunchConfig"
      }
    },
    "ClusterDefaultCapacityASG00CC9431": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "MaxSize": "1",
        "MinSize": "1",
        "DesiredCapacity": "1",
        "LaunchConfigurationName": {
          "Ref": "ClusterDefaultCapacityLaunchConfig72790CF7"
        },
        "Tags": [
          {
            "Key": "Name",
            "PropagateAtLaunch": true,
            "Value": "ClusterStack/Cluster/DefaultCapacity"
          }
        ],
        "VPCZoneIdentifier": [
          {
            "Ref": "VpcPrivateSubnet1Subnet536B997A"
          },
          {
            "Ref": "VpcPrivateSubnet2Subnet3788AAA1"
          }
        ]
      },
      "UpdatePolicy": {
        "AutoScalingReplacingUpdate": {
          "WillReplace": true
        },
        "AutoScalingScheduledAction": {
          "IgnoreUnmodifiedGroupSizeProperties": true
        }
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Cluster/DefaultCapacity/ASG"
      }
    },
    "ClusterDefaultCapacityDrainECSHookTopic7F7FDAFE": {
      "Type": "AWS::SNS::Topic",
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Cluster/DefaultCapacity/DrainECSHook/Topic/Resource"
      }
    },
    "ClusterDefaultCapacityDrainECSHookFunctionServiceRoleC01EBBA1": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": {
                  "Fn::Join": [
                    "",
                    [
                      "lambda.",
                      {
                        "Ref": "AWS::URLSuffix"
                      }
                    ]
                  ]
                }
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Cluster/DefaultCapacity/DrainECSHook/Function/ServiceRole/Resource"
      }
    },
    "ClusterDefaultCapacityDrainECSHookFunctionServiceRoleDefaultPolicy7E96B28A": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "autoscaling:CompleteLifecycleAction",
                "ec2:DescribeInstances",
                "ec2:DescribeInstanceAttribute",
                "ec2:DescribeInstanceStatus",
                "ec2:DescribeHosts"
              ],
              "Effect": "Allow",
              "Resource": "*"
            },
            {
              "Action": [
                "ecs:ListContainerInstances",
                "ecs:SubmitContainerStateChange",
                "ecs:SubmitTaskStateChange",
                "ecs:DescribeContainerInstances",
                "ecs:UpdateContainerInstancesState",
                "ecs:ListTasks",
                "ecs:DescribeTasks"
              ],
              "Effect": "Allow",
              "Resource": "*"
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "ClusterDefaultCapacityDrainECSHookFunctionServiceRoleDefaultPolicy7E96B28A",
        "Roles": [
          {
            "Ref": "ClusterDefaultCapacityDrainECSHookFunctionServiceRoleC01EBBA1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Cluster/DefaultCapacity/DrainECSHook/Function/ServiceRole/DefaultPolicy/Resource"
      }
    },
    "ClusterDefaultCapacityDrainECSHookFunction3CC0FAB7": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Code": {
          "ZipFile": "import boto3, json, os, time\n\necs = boto3.client('ecs')\nautoscaling = boto3.client('autoscaling')\n\n\ndef lambda_handler(event, context):\n  print(json.dumps(event))\n  cluster = os.environ['CLUSTER']\n  snsTopicArn = event['Records'][0]['Sns']['TopicArn']\n  lifecycle_event = json.loads(event['Records'][0]['Sns']['Message'])\n  instance_id = lifecycle_event.get('EC2InstanceId')\n  if not instance_id:\n    print('Got event without EC2InstanceId: %s', json.dumps(event))\ [...]
        },
        "Handler": "index.lambda_handler",
        "Role": {
          "Fn::GetAtt": [
            "ClusterDefaultCapacityDrainECSHookFunctionServiceRoleC01EBBA1",
            "Arn"
          ]
        },
        "Runtime": "python3.6",
        "Environment": {
          "Variables": {
            "CLUSTER": {
              "Ref": "ClusterEB0386A7"
            }
          }
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ClusterStack/Cluster/DefaultCapacity"
          }
        ],
        "Timeout": 310
      },
      "DependsOn": [
        "ClusterDefaultCapacityDrainECSHookFunctionServiceRoleDefaultPolicy7E96B28A",
        "ClusterDefaultCapacityDrainECSHookFunctionServiceRoleC01EBBA1"
      ],
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Cluster/DefaultCapacity/DrainECSHook/Function/Resource"
      }
    },
    "ClusterDefaultCapacityDrainECSHookFunctionTopicSubscription1C9A2E87": {
      "Type": "AWS::SNS::Subscription",
      "Properties": {
        "Protocol": "lambda",
        "TopicArn": {
          "Ref": "ClusterDefaultCapacityDrainECSHookTopic7F7FDAFE"
        },
        "Endpoint": {
          "Fn::GetAtt": [
            "ClusterDefaultCapacityDrainECSHookFunction3CC0FAB7",
            "Arn"
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Cluster/DefaultCapacity/DrainECSHook/Function/TopicSubscription/Resource"
      }
    },
    "ClusterDefaultCapacityDrainECSHookFunctionTopicB3CFAE5D": {
      "Type": "AWS::Lambda::Permission",
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "ClusterDefaultCapacityDrainECSHookFunction3CC0FAB7",
            "Arn"
          ]
        },
        "Principal": "sns.amazonaws.com",
        "SourceArn": {
          "Ref": "ClusterDefaultCapacityDrainECSHookTopic7F7FDAFE"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Cluster/DefaultCapacity/DrainECSHook/Function/Topic"
      }
    },
    "ClusterDefaultCapacityLifecycleHookDrainHookRole796161DF": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": {
                  "Fn::Join": [
                    "",
                    [
                      "autoscaling.",
                      {
                        "Ref": "AWS::URLSuffix"
                      }
                    ]
                  ]
                }
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Cluster/DefaultCapacity/LifecycleHookDrainHook/Role/Resource"
      }
    },
    "ClusterDefaultCapacityLifecycleHookDrainHookRoleDefaultPolicyF85D63E1": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sns:Publish",
              "Effect": "Allow",
              "Resource": {
                "Ref": "ClusterDefaultCapacityDrainECSHookTopic7F7FDAFE"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "ClusterDefaultCapacityLifecycleHookDrainHookRoleDefaultPolicyF85D63E1",
        "Roles": [
          {
            "Ref": "ClusterDefaultCapacityLifecycleHookDrainHookRole796161DF"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Cluster/DefaultCapacity/LifecycleHookDrainHook/Role/DefaultPolicy/Resource"
      }
    },
    "ClusterDefaultCapacityLifecycleHookDrainHook55B54883": {
      "Type": "AWS::AutoScaling::LifecycleHook",
      "Properties": {
        "AutoScalingGroupName": {
          "Ref": "ClusterDefaultCapacityASG00CC9431"
        },
        "LifecycleTransition": "autoscaling:EC2_INSTANCE_TERMINATING",
        "DefaultResult": "CONTINUE",
        "HeartbeatTimeout": 300,
        "NotificationTargetARN": {
          "Ref": "ClusterDefaultCapacityDrainECSHookTopic7F7FDAFE"
        },
        "RoleARN": {
          "Fn::GetAtt": [
            "ClusterDefaultCapacityLifecycleHookDrainHookRole796161DF",
            "Arn"
          ]
        }
      },
      "DependsOn": [
        "ClusterDefaultCapacityLifecycleHookDrainHookRoleDefaultPolicyF85D63E1",
        "ClusterDefaultCapacityLifecycleHookDrainHookRole796161DF"
      ],
      "Metadata": {
        "aws:cdk:path": "ClusterStack/Cluster/DefaultCapacity/LifecycleHookDrainHook/Resource"
      }
    }
  },
  "Outputs": {
    "ExportsOutputRefVpcPrivateSubnet1Subnet536B997AFD4CC940": {
      "Value": {
        "Ref": "VpcPrivateSubnet1Subnet536B997A"
      },
      "Export": {
        "Name": "ClusterStack:ExportsOutputRefVpcPrivateSubnet1Subnet536B997AFD4CC940"
      }
    },
    "ExportsOutputRefVpcPrivateSubnet2Subnet3788AAA1380949A3": {
      "Value": {
        "Ref": "VpcPrivateSubnet2Subnet3788AAA1"
      },
      "Export": {
        "Name": "ClusterStack:ExportsOutputRefVpcPrivateSubnet2Subnet3788AAA1380949A3"
      }
    },
    "ExportsOutputRefClusterEB0386A796A0E3FE": {
      "Value": {
        "Ref": "ClusterEB0386A7"
      },
      "Export": {
        "Name": "ClusterStack:ExportsOutputRefClusterEB0386A796A0E3FE"
      }
    },
    "ExportsOutputRefVpc8378EB38272D6E3A": {
      "Value": {
        "Ref": "Vpc8378EB38"
      },
      "Export": {
        "Name": "ClusterStack:ExportsOutputRefVpc8378EB38272D6E3A"
      }
    },
    "ExportsOutputRefVpcPublicSubnet1Subnet5C2D37C4FFA2B456": {
      "Value": {
        "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
      },
      "Export": {
        "Name": "ClusterStack:ExportsOutputRefVpcPublicSubnet1Subnet5C2D37C4FFA2B456"
      }
    },
    "ExportsOutputRefVpcPublicSubnet2Subnet691E08A351552740": {
      "Value": {
        "Ref": "VpcPublicSubnet2Subnet691E08A3"
      },
      "Export": {
        "Name": "ClusterStack:ExportsOutputRefVpcPublicSubnet2Subnet691E08A351552740"
      }
    }
  }
}
